# chaos-agents

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  RELEASE_NOTES.md  Readme.md  install.sh  release.sh
.agent/: Claude.md
config/: daemon.yaml  example-db.yaml  example-k8s.yaml  example-llm.yaml  example-server.yaml
crates/chaos-cli/: Cargo.toml
crates/chaos-cli/src/: execution.rs  main.rs
crates/chaos-cli/src/commands/: agent.rs  daemon.rs  list_skills.rs  mod.rs  plan.rs  run.rs  validate.rs
crates/chaos-core/: Cargo.toml
crates/chaos-core/src/: agent.rs  config.rs  discovery.rs  error.rs  event.rs  experiment.rs  lib.rs  orchestrator.rs  report.rs  rollback.rs  skill.rs
crates/chaos-db/: Cargo.toml
crates/chaos-db/src/: agent.rs  config.rs  connection.rs  lib.rs  mongo_agent.rs  mongo_config.rs  mongo_discovery.rs  schema_discovery.rs
crates/chaos-db/src/skills/: config_change.rs  crdb_zone_config.rs  insert_load.rs  lock_utils.rs  mod.rs  mongo_connection_stress.rs  mongo_find_load.rs  mongo_index_drop.rs  mongo_insert_load.rs  mongo_profiling_change.rs  mongo_update_load.rs  row_lock.rs  select_load.rs  table_lock.rs  update_load.rs  ysql_follower_reads.rs
crates/chaos-k8s/: Cargo.toml
crates/chaos-k8s/src/: agent.rs  client.rs  config.rs  lib.rs
crates/chaos-k8s/src/skills/: mod.rs  network_chaos.rs  node_drain.rs  pod_kill.rs  resource_stress.rs
crates/chaos-llm/: Cargo.toml
crates/chaos-llm/src/: lib.rs  mcp.rs  planner.rs  provider.rs  tool.rs
crates/chaos-server/: Cargo.toml
crates/chaos-server/src/: agent.rs  config.rs  lib.rs  service_discovery.rs  ssh.rs
crates/chaos-server/src/skills/: cpu_stress.rs  disk_fill.rs  memory_stress.rs  mod.rs  permission_change.rs  service_stop.rs
crates/chaos-tui/: Cargo.toml
crates/chaos-tui/src/: app.rs  event.rs  execution.rs  lib.rs  theme.rs
crates/chaos-tui/src/dashboard/: conversation.rs  mod.rs  progress.rs  report.rs  resources.rs  rollback.rs  status.rs
crates/chaos-tui/src/widgets/: input.rs  mod.rs  selector.rs  spinner.rs
crates/chaos-tui/src/wizard/: mod.rs  prompt.rs  provider.rs  provider_config.rs  review.rs  target.rs  target_config.rs  welcome.rs
