[package]
name = "chaos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chaos"
path = "src/main.rs"

[dependencies]
chaos-core = { path = "../chaos-core" }
chaos-db = { path = "../chaos-db" }
chaos-k8s = { path = "../chaos-k8s" }
chaos-server = { path = "../chaos-server" }
chaos-llm = { path = "../chaos-llm" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
cron = "0.13"
chrono = { workspace = true }
